# audio-analysis-platform

./: .gitignore  .replit  README.md  app.py  audio_analyzer.py  batch_manager.py  database.py  gemini_analyzer.py  google_drive.py  models.py  pyproject.toml  routes.py
attached_assets/: Pasted-import-os-import-google-generativeai-as-genai-genai-configure-api-key-os-environ-GEMINI-API-KEY--1736360753185.txt  Pasted-import-tempfile-import-os-import-shutil-import-logging-import-google-generativeai-as-genai-from-typi-1736215549167.txt
data/: batch_20250112_192711_status.json  batch_20250112_194809_status.json  batch_20250112_195415_status.json  batch_20250112_201827_status.json  batch_20250112_202926_status.json  batch_20250112_204444_status.json  batch_20250112_211615_status.json  batch_20250112_212933_status.json  batch_20250112_214257_status.json  batch_20250112_215253_status.json  batch_20250112_220122_status.json  batch_20250112_220912_status.json  batch_20250113_022100_status.json  batch_20250113_025026_status.json  batch_20250113_025551_status.json  batch_20250113_030045_status.json  batch_20250113_030330_status.json  batch_20250113_030819_status.json  batch_20250113_031319_status.json  batch_20250113_031733_status.json  batch_20250113_032207_status.json  batch_20250113_032823_status.json  batch_20250113_033718_status.json  batch_20250113_034354_status.json  batch_20250114_211314_status.json  batch_20250114_212136_status.json  batch_20250114_212523_status.json  batch_20250114_213143_status.json  batch_20250114_214627_status.json  batch_20250114_215118_status.json  (+27 more)
(+16 files in other folders)
