[project]
name = "repl-nix-audiobundlesage"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "decorator==4.4.2",
    "email-validator>=2.2.0",
    "flask>=2.2.0",
    "flask-sqlalchemy>=3.0.2",
    "google-generativeai>=0.8.3",
    "imageio-ffmpeg==0.4.8",
    "imageio==2.31.1",
    "librosa>=0.10.2.post1",
    "moviepy==1.0.3",
    "numpy==1.24.3",
    "pillow==9.5.0",
    "proglog==0.1.10",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "replit>=4.1.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.0",
    "werkzeug>=2.2.0",
    "openai>=1.59.5",
    "pydub>=0.25.1",
    "flask-migrate>=4.0.7",
    "google-auth>=2.37.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.157.0",
    "flask-login>=0.6.3",
    "oauthlib>=3.2.2",
    "flask-cors>=5.0.0",
]
